[package]
name = "MSD_Game_Service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.35.0", features = ["full"] }
uuid = "1.6.1"
thiserror = "1.0.50"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
actix = "0.13.1"