[package]
name = "MSD_Game_Service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.35.0", features = ["full"] }
uuid = { version= "1.6.1", features = ["serde", "v4"] }
thiserror = "1.0.50"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
actix-web = "4.4.0"
#async redis
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }
mobc = "0.8.2"
mobc-redis = "0.8.2"
rand = "0.8.5"
tracing-subscriber = "0.3.18"