[package]
name = "MSD_Game_Service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.36.0", features = ["full"] }
uuid = { version= "1.7.0", features = ["serde", "v4"] }
thiserror = "1.0.57"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
actix-web = "4.5.1"
#async redis
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }
mobc = "0.8.3"
mobc-redis = "0.8.2"
rand = "0.8.5"
tracing-subscriber = { version= "0.3.18", features = ["env-filter"]}
rayon = "1.8.1"
actix-cors = "0.7.0"
log = "0.4.20"
